...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appIcon"
                app:layout_constraintTop_toTopOf="parent">

                <CheckBox
                    android:id="@+id/appName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
...
