...
                    android:text="@string/notifications_sync_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/server_manage_app_notifications"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textColor="?attr/colorPrimary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/notifications_selected_apps_title"
...
